// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encrypting should encrypt blacklist 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEQDtKRiCJPL40t4EOMKkANi9XlJHDvEKVrrJnuqaZtKH+628Eh0gbW02Fl3tg==",
              "byteOffset": 0,
              "length": 70,
            },
            "age": 25,
            "id": 1,
            "name": "Camilla",
            "picture": "camilla.png",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "blacklist",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,name,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;

exports[`Encrypting should encrypt data 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUfsSlGjy9yeoyoKCagomeQNi6GxWHHyKKSOoDnO1cdpZAPaj/w0Fz/XkkQ8mv8HRpOEZ5iOH4z70BDC4z5JNqzsf/D0UTbCCAa5s/a5UzXgumHHTqk7lssg6Wri+vilp",
              "byteOffset": 0,
              "length": 120,
            },
            "age": 25,
            "id": 1,
            "name": "Camilla",
            "picture": "",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "MyDatabase",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,name,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;

exports[`Encrypting should encrypt whitelist 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUfsSlGjy9yeoyoKCagomeQNi6GxWHHyKKSOoDnO1cdpZAPaj/w0Fz/XkkQ8mv8HRpOEZ5iOH4z70BDC4z5JNqzsf/D0UTbCCAa5s/a5UzXgumHHTqk7lssg6Wri+vilp",
              "byteOffset": 0,
              "length": 120,
            },
            "age": 25,
            "id": 1,
            "name": "Camilla",
            "picture": "camilla.png",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "whitelist",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,name,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;

exports[`Encrypting should still work when you update an existing entity 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__key_change_detection": "uint8array2",
              "__key_change_detection.buffer": "arraybuffer",
            },
            "__key_change_detection": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVsCc5OcA42SHmcWLiHEBYQNioi8BIm+cOUz6Ty71KOZXDvC24RhChuXrxg9x6YnP47cB/mCw8Cz5am7lnIhB7hAg6yECG+/TXg==",
              "byteOffset": 0,
              "length": 97,
            },
            "friends": "NON_INDEXED_FIELDS",
            "id": 1,
          },
        ],
        "tableName": "_encryptionSettings",
      },
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMe3m+xHIk9OcimfPF78dTwNi6GxWHHyKKTOmDn+2c95bQ6Cq/RoHga+w0w0Wqt7drfla/i3g4yrlBju5wMoH+BwZ6z0FG6iMZr926voQjDE8kmOKv0usjdApEa2k+yc216yVCghRAoSNIObKyVGyCVuX29RoQnnFS9kA7IH7KA2tXAdJJrSUHMYUHGh3askAd8+/7erJoLOU3RNyDdYc0RlRXk+Mwj7mbQORHfaeeF7eUUjneuR0",
              "byteOffset": 0,
              "length": 207,
            },
            "age": 25,
            "id": 1,
            "name": "",
            "picture": "",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "in-and-out-test",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "_encryptionSettings",
        "rowCount": 1,
        "schema": "++id",
      },
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;

exports[`Encrypting should upgrade 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPgxdjFy2otNxGdJeSMtwYANi6GxWHHyKKSOoDnO1cdpZAPaj/w0Fz/XkkQ8mv8HRpOEZ5iOH4z70BDC4z5JNqzsf/D0UTbCCAa5s/a5UzXgumHHTqk7lssg6Wri+vik4haySXEcSGg==",
              "byteOffset": 0,
              "length": 127,
            },
            "age": 25,
            "id": 1,
            "name": "Camilla",
            "picture": "camilla.png",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "upgrade-db",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,name,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;

exports[`Encrypting should wait for a promise to resolve with a key if given a promise 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "inbound": true,
        "rows": Array [
          Object {
            "$types": Object {
              "__encryptedData": "uint8array2",
              "__encryptedData.buffer": "arraybuffer",
            },
            "__encryptedData": Object {
              "buffer": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUfsSlGjy9yeoyoKCagomeQNi6GxWHHyKKSOoDnO1cdpZAPaj/w0Fz/XkkQ8mv8HRpOEZ5iOH4z70BDC4z5JNqzsf/D0UTbCCAa5s/a5UzXgumHHTqk7lssg6Wri+vilp",
              "byteOffset": 0,
              "length": 120,
            },
            "age": 25,
            "id": 1,
            "name": "Camilla",
            "picture": "",
            "street": "",
          },
        ],
        "tableName": "friends",
      },
    ],
    "databaseName": "async-key",
    "databaseVersion": 1,
    "tables": Array [
      Object {
        "name": "friends",
        "rowCount": 1,
        "schema": "++id,name,age",
      },
    ],
  },
  "formatName": "dexie",
  "formatVersion": 1,
}
`;
